--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "js-cookie": "^2.2.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-file-reader": "^1.1.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "uid2": "0.0.3"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
