--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.8.2",
     "react-file-reader": "^1.1.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "resize-base64": "^1.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
